<resources>
    <string name="app_name">Book Store</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welecome">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="snackbar_action">Action.</string>
    <string name="Home">Home</string>
    <string name="Shop">Shop</string>
    <string name="Account">Account</string>
    <string name="Basket">Basket</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="do_you_have_not_any_account">Already have an account?</string>
    <string name="registration">Registration</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="welcome">Welcome!</string>
    <string name="book_store">Book Store</string>
    <string name="clean_code">Clean Code</string>
    <string name="ahmed_kamal">Ahmed Kamal</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="about">About</string>
    <string name="my_favourite">My Favourite</string>
    <string name="change_password">Change Password</string>
    <string name="language_setting">Language Setting</string>
    <string name="account_profile">Account Profile</string>
    <string name="osama_sayed">Osama sayed</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="update">Update</string>
    <string name="choose">Choose</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="author">author: </string>
    <string name="title">title: </string>
    <string name="language">language: </string>
    <string name="pages">pages: </string>
    <string name="department">department</string>
    <string name="description">description: </string>
</resources>